# bofe

./: .sqruffignore  Cargo.toml  README.md
.github/actions/setup-rust/: action.yaml
.github/workflows/: analysis.yaml  cd.yaml  tests.yaml
api/: Cargo.toml
api/src/: config.rs  constants.rs  handlers.rs  main.rs
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: config.rs  constants.rs  enums.rs  jobs.rs  lib.rs  models.rs  pagination.rs  params.rs  scalars.rs  test_utils.rs
core/src/commands/: activity_commands.rs  application_commands.rs  attachment_commands.rs  attachment_key_commands.rs  blob_commands.rs  board_channel_commands.rs  board_commands.rs  card_attachment_commands.rs  card_commands.rs  card_label_commands.rs  confirmation_commands.rs  im_database_commands.rs  label_commands.rs  list_commands.rs  member_commands.rs  mod.rs  session_commands.rs  user_commands.rs  user_email_commands.rs  user_password_commands.rs
core/src/graphql/: context.rs  guards.rs  mod.rs  mutation_root.rs  objects.rs  query_root.rs  subscription_root.rs
core/src/graphql/objects/: activity_object.rs  board_object.rs  card_object.rs  label_object.rs  mod.rs  user_object.rs
core/src/models/: activity.rs  blob.rs  board.rs  card.rs  label.rs  list.rs  mod.rs  user.rs
locales/en/: errors.ftl  mailer.ftl
locales/es/: errors.ftl  mailer.ftl  mailter.ftl
migrations/: 20260412185642_initial_setup.down.sql  20260412185642_initial_setup.up.sql  20260420221407_create_table_users.down.sql  20260420221407_create_table_users.up.sql  20260504202918_create_table_boards.down.sql  20260504202918_create_table_boards.up.sql  20260505203205_create_table_lists.up.sql  20260507161429_create_table_cards.up.sql  20260508164612_create_table_applications.up.sql  20260508174321_create_table_sessions.up.sql  20260523015631_create_table_members.up.sql  20260602180109_alter_index_board_slug.down.sql  20260602180109_alter_index_board_slug.up.sql  20260603224119_create_table_labels.up.sql  20260605193618_create_table_card_labels.down.sql  20260605193618_create_table_card_labels.up.sql  20260609122435_alter_type_language_code_add_es.down.sql  20260609122435_alter_type_language_code_add_es.up.sql  20260610135325_create_table_confirmations.up.sql  20260614192535_create_table_activities.down.sql  20260614192535_create_table_activities.up.sql  20260622164200_add_column_discarded_at_to_activities.down.sql  20260622164200_add_column_discarded_at_to_activities.up.sql  20260622210313_create_table_blobs.down.sql  20260622210313_create_table_blobs.up.sql  20260623150821_create_table_attachments.up.sql  20260623212209_create_table_attachment_keys.down.sql  20260623212209_create_table_attachment_keys.up.sql  20260625222842_change_column_user_id_on_cards.up.sql  20260626224407_create_table_card_attachments.down.sql  20260626224407_create_table_card_attachments.up.sql  20260701004522_add_cover_image_to_cards.down.sql  20260701004522_add_cover_image_to_cards.up.sql  20260702022811_add_file_types_to_blobs.up.sql  20260711161952_add_archived_at_to_cards.up.sql
monitor/: Cargo.toml
monitor/src/: config.rs  constants.rs  handlers.rs  ip_geo.rs  mailer.rs  main.rs
