[workspace]
resolver = "3"
members = ["api", "cli", "core", "monitor"]

[workspace.package]
version = "0.0.0-alpha.0"
edition = "2024"
authors = ["Javier E. <jaedns@gmail.com>"]
homepage = "https://boards.mango3.app"
repository = "https://github.com/mangocubed/boards"

[workspace.dependencies]
apalis = "1.0.0-rc.7"
async-graphql = "8.0.0-rc.5"
chrono = { version = "0.4.44", features = ["serde"] }
envconfig = "0.11.1"
sentry = "0.48.1"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.52.2", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
tracing = "0.1.44"
url = { version = "2.5.8", features = ["serde"] }
uuid = "1.23.1"
boards-core = { path = "./core", default-features = false }
toolbox = { git = "https://github.com/mangocubed/toolbox.git", features = [
    "identity-client",
], rev = "044f6b8" }
