[workspace]
resolver = "3"
members = ["api", "cli", "core", "monitor"]

[workspace.package]
version = "0.0.0-alpha.6"
edition = "2024"
authors = ["Javier E. <jaedns@gmail.com>"]
homepage = "https://about.bofe.app"
repository = "https://github.com/javierEd/bofe"

[workspace.dependencies]
apalis = "1.0.0-rc.9"
async-graphql = "8.0.0-rc.5"
chrono = { version = "0.4.45", features = ["serde"] }
envconfig = "0.11.1"
serde = "1.0.228"
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
tracing = "0.1.44"
url = { version = "2.5.8", features = ["serde"] }
uuid = { version = "1.23.2", features = ["serde"] }
bofe-core = { path = "./core", default-features = false }
