[package]
name = "boards-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
async-graphql = { workspace = true, features = [
    "apollo_persisted_queries",
    "apollo_tracing",
    "log",
] }
async-graphql-axum = "8.0.0-rc.5"
axum = "0.8.9"
axum-client-ip = "1.3.1"
axum-extra = { version = "0.12.6", features = ["typed-header"] }
envconfig.workspace = true
sentry = { workspace = true, features = ["tower-http"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http = { version = "0.6.10", features = ["cors", "fs", "trace"] }
tracing.workspace = true
uuid.workspace = true
boards-core = { workspace = true, features = ["graphql"] }
toolbox = { workspace = true, features = ["axum"] }
