[package]
name = "boards-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
chrono.workspace = true
clap = { version = "4.6.1", features = ["derive"] }
tokio.workspace = true
boards-core = { workspace = true, features = ["graphql"] }
