[package]
name = "bofe-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[build-dependencies]
chrono.workspace = true

[dependencies]
ab_glyph = "0.2.32"
anyhow = "1.0.102"
apalis.workspace = true
apalis-redis = "1.0.0-rc.8"
async-graphql = { workspace = true, features = [
    "chrono",
    "chrono-duration",
    "url",
    "uuid",
], optional = true }
async-stream = "0.3.6"
argon2 = "0.5.3"
bytesize = "2.3.1"
cached = { version = "1.1.0", features = [
    "async",
    "redis_store",
    "redis_tokio",
] }
chrono.workspace = true
convert_case = "0.11.0"
envconfig.workspace = true
futures = "0.3.32"
futures-util = "0.3.32"
image = "0.25.10"
imageproc = "0.27.0"
rand = "0.10.1"
rand_core = { version = "0.6.4", features = ["getrandom"] }
redis = "1.2.2"
regex = "1.12.3"
rust_iso3166 = "0.1.14"
serde.workspace = true
serde_json.workspace = true
sqlx = { version = "0.9.0", features = [
    "chrono",
    "postgres",
    "runtime-tokio",
    "tls-native-tls",
    "uuid",
] }
strum = { version = "0.28.0", features = ["derive"] }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uucore = { version = "0.9.0", features = ["fsext"] }
url.workspace = true
uuid.workspace = true
validator = { version = "0.20.0", features = ["derive"] }

[features]
graphql = ["dep:async-graphql"]
