[package]
name = "bofe-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[build-dependencies]
chrono.workspace = true

[dependencies]
ab_glyph = { version = "0.2.32", optional = true }
anyhow = "1.0.102"
apalis.workspace = true
apalis-redis = "1.0.0-rc.8"
async-graphql = { workspace = true, features = [
    "chrono",
    "chrono-duration",
    "url",
    "uuid",
], optional = true }
async-stream = "0.3.6"
argon2 = "0.5.3"
bytesize = { version = "2.4.0", optional = true }
cached = { version = "2.0.2", features = [
    "async",
    "redis_store",
    "redis_tokio",
] }
chrono.workspace = true
convert_case = "0.11.0"
digest-io = { version = "0.1.0", optional = true }
envconfig.workspace = true
file-format = "0.29.0"
fluent-bundle = "0.16.0"
fluent-templates = "0.14.0"
futures = "0.3.32"
futures-util = "0.3.32"
image = { version = "0.25.10", optional = true }
imageproc = { version = "0.27.0", optional = true }
rand = { version = "0.10.1", optional = true }
rand_core = { version = "0.6.4", features = ["getrandom"] }
redis = "1.2.2"
regex = "1.12.4"
rust_iso3166 = "0.2.0"
serde.workspace = true
serde_json.workspace = true
sha2 = { version = "0.11.0", optional = true }
sqlx = { version = "0.9.0", features = [
    "chrono",
    "postgres",
    "runtime-tokio",
    "tls-native-tls",
    "uuid",
] }
strum = { version = "0.28.0", features = ["derive"] }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uucore = { version = "0.9.0", features = ["fsext"] }
url.workspace = true
uuid.workspace = true
validator = { version = "0.20.0", features = ["derive"], optional = true }

[features]
graphql = [
    "dep:ab_glyph",
    "dep:async-graphql",
    "dep:bytesize",
    "dep:digest-io",
    "dep:image",
    "dep:imageproc",
    "dep:rand",
    "dep:sha2",
    "dep:validator",
]
