[package]
name = "bofe-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[build-dependencies]
chrono.workspace = true

[dependencies]
ab_glyph = { version = "0.2.32", optional = true }
anyhow = "1.0.103"
apalis.workspace = true
apalis-redis = "1.0.0-rc.8"
async-graphql = { workspace = true, features = [
    "chrono",
    "chrono-duration",
    "dynamic-schema",
    "url",
    "uuid",
], optional = true }
async-stream = "0.3.6"
argon2 = "0.5.3"
bytes = "1.12.1"
bytesize = { version = "2.4.2", optional = true }
cached = { version = "2.0.2", features = [
    "async",
    "redis_store",
    "redis_tokio",
] }
chrono.workspace = true
convert_case = "0.11.0"
envconfig.workspace = true
file-format = { version = "0.29.0", features = [
    "reader-ebml",
    "reader-mp4",
    "reader-pdf",
    "reader-xml",
] }
fluent-bundle = "0.16.0"
fluent-templates = "0.14.0"
futures = "0.3.32"
futures-util = "0.3.32"
image = { version = "0.25.10", optional = true }
imageproc = { version = "0.27.0", optional = true }
rand = { version = "0.10.2", optional = true }
rand_core = { version = "0.6.4", features = ["getrandom"] }
redis = "1.4.1"
regex = { version = "1.13.1", optional = true }
resvg = { version = "0.47.0", optional = true }
rust_iso3166 = "0.2.0"
serde.workspace = true
serde_json.workspace = true
sha2 = { version = "0.11.0", optional = true }
sqlx = { version = "0.9.0", features = [
    "chrono",
    "postgres",
    "runtime-tokio",
    "tls-native-tls",
    "uuid",
] }
strum = { version = "0.28.0", features = ["derive"] }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uucore = { version = "0.9.0", features = ["fsext"] }
url.workspace = true
uuid.workspace = true
validator = { version = "0.20.0", features = ["derive"], optional = true }

[dev-dependencies]
fake = { version = "5.1.0", features = ["chrono"] }

[features]
graphql = [
    "dep:ab_glyph",
    "dep:async-graphql",
    "dep:bytesize",
    "dep:image",
    "dep:imageproc",
    "dep:rand",
    "dep:regex",
    "dep:resvg",
    "dep:sha2",
    "dep:validator",
]
