[package]
name = "bofe-monitor"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.102"
apalis.workspace = true
envconfig.workspace = true
lettre = { version = "0.11.22", features = [
    "smtp-transport",
    "tokio1-native-tls",
] }
reqwest = { version = "0.13.3", features = ["json"] }
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
bofe-core.workspace = true
